--- a/Recettes_cake_design/Les_biscuits_de_base/index.html
+++ b/Recettes_cake_design/Les_biscuits_de_base/index.html
@@ -133,7 +133,7 @@
                     <div class="row justify-content-around mt-5">
                         <a href="Recette_molly_cake/index.html"><img src="img/cake_base.jpg" alt="cake" width="370" height="270"><div class="notes text-center"><h5>Molly Cake</h5></div></a>
 
-                        <a href="Les_biscuits_de_base/index.html"><img src="img/sponge_cake.jpg" alt="cake" width="370" height="270"><div class="notes text-center"><h5>Sponge Cake</h5></div></a>
+                        <a href="#"><img src="img/sponge_cake.jpg" alt="cake" width="370" height="270"><div class="notes text-center"><h5>Sponge Cake</h5></div></a>
 
                         <a href="#"><img src="img/chocolat.jpg" alt="cake" width="370" height="270"><div class="notes text-center"><h5>Gâteau au Chocolat</h5></div></a>
                     </div>
