--- a/index.html
+++ b/index.html
@@ -78,15 +78,15 @@
             		<li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Recettes</a>
 						<ul>
-							<li><a href="Recettes_Gateaux/index.html" target="_blank">Gateaux</a></li>
-							<li><a href="#" target="_blank">Entremets</a></li>
-							<li><a href="#" target="_blank">Tartes</a></li>
-							<li><a href="Recettes_cake_design/index.html" target="_blank">Cakes Design</a></li>
-							<li><a href="#" target="_blank">Mignardises</a></li>
-							<li><a href="#" target="_blank">Viennoisseries</a></li>
-							<li><a href="Recettes_Cookies/index.html" target="_blank">Cookies</a></li>
+							<li><a href="">Gateaux</a></li>
+							<li><a href="">Entremets</a></li>
+							<li><a href="">Tartes</a></li>
+							<li><a href="Recettes_cake_design/index.html">Cakes Design</a></li>
+							<li><a href="">Mignardises</a></li>
+							<li><a href="">Viennoisseries</a></li>
+							<li><a href="Recettes_Cookies/index.html">Cookies</a></li>
 							<li><a href="Recettes_healthy/index.html">Healthy</a></li>
-							<li><a href="#">Pâtes à tartiner</a></li>
+							<li><a href="">Pâtes à tartiner</a></li>
 						</ul>
 					</li>
 						
