--- a/Recettes_de_fêtes/index.html
+++ b/Recettes_de_fêtes/index.html
@@ -77,9 +77,9 @@
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Recettes</a>
 						<ul>
-							<li><a href="../Recettes_gateaux/index.html">Gateaux</a></li>
-							<li><a href="#" target="_blank">Entremets</a></li>
-							<li><a href="#" target="_blank">Tartes</a></li>
+							<li><a href="#">Gateaux</a></li>
+							<li><a href="#">Entremets</a></li>
+							<li><a href="#">Tartes</a></li>
 							<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
 							<li><a href="#">Mignardises</a></li>
 							<li><a href="#">Viennoisseries</a></li>
@@ -92,15 +92,15 @@
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="#" target="_blank">Les pâtes</a></li>
-							<li><a href="#" target="_blank">Les crèmes</a></li>
-							<li><a href="#" target="_blank">Les biscuits</a></li>
+							<li><a href="#">Les pâtes</a></li>
+							<li><a href="#">Les crèmes</a></li>
+							<li><a href="#">Les biscuits</a></li>
 						</ul>
 					</li>
 						
 
                     <li class="nav-item ml-3 mr-3">
-                        <a href="#" target="_blank" class="nav-link">Mes Adresses</a>
+                        <a href="#" class="nav-link">Mes Adresses</a>
                     </li>
 
                     <li class="nav-item ml-3 mr-3">
