--- a/A_Propos/index.html
+++ b/A_Propos/index.html
@@ -78,15 +78,13 @@
                     <li class="nav-item ml-5 mr-5">
 							<a href="#" class="nav-link">Recettes</a>
 							<ul>
-								<li><a href="../Recettes_gateaux/index.html">Gateaux</a></li>
+								<li><a href="#">Gateaux</a></li>
 								<li><a href="#">Entremets</a></li>
 								<li><a href="#">Tartes</a></li>
-								<li><a href="#">Cakes</a></li>
 								<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
 								<li><a href="#">Mignardises</a></li>
 								<li><a href="#">Viennoisseries</a></li>
 								<li><a href="../Recettes_Cookies/index.html">Cookies</a></li>
-								<li><a href="#">Confiseries</a></li>
 								<li><a href="../Recettes_healthy/index.html">Healthy</a></li>
 								<li><a href="#">Pâtes à tartiner</a></li>
 							</ul>
