--- a/Recettes_cake_design/Les_biscuits_de_base/Recette_molly_cake/index.html
+++ b/Recettes_cake_design/Les_biscuits_de_base/Recette_molly_cake/index.html
@@ -80,7 +80,7 @@
                    <li class="nav-item ml-3 mr-3">
                         <a href="#" class="nav-link">Recettes</a>
                         <ul>
-                            <li><a href="../../../Recettes_Gateaux/index.html">Gateaux</a></li>
+                            <li><a href="#">Gateaux</a></li>
                             <li><a href="#">Entremets</a></li>
                             <li><a href="#">Tartes</a></li>
                             <li><a href="../../../Recettes_cake_design/index.html">Cakes Design</a></li>
@@ -95,9 +95,9 @@
                     <li class="nav-item ml-3 mr-3">
                         <a href="#" class="nav-link">Techniques de base</a>
                         <ul>
-                            <li><a href="#" target="_blank">Les pâtes</a></li>
-                            <li><a href="#" target="_blank">Les crèmes</a></li>
-                            <li><a href="#" target="_blank">Les biscuits</a></li>
+                            <li><a href="#">Les pâtes</a></li>
+                            <li><a href="#">Les crèmes</a></li>
+                            <li><a href="#">Les biscuits</a></li>
                         </ul>
                     </li>
                        
