--- a/Recettes_de_fêtes/Recette_galette_amande/index.html
+++ b/Recettes_de_fêtes/Recette_galette_amande/index.html
@@ -76,8 +76,8 @@
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Recettes</a>
 						<ul>
-							<li><a href="../../Recettes_Gateaux/index.html">Gateaux</a></li>
-							<li><a href="#" target="_blank">Entremets</a></li>
+							<li><a href="#">Gateaux</a></li>
+							<li><a href="#">Entremets</a></li>
 							<li><a href="#">Tartes</a></li>
 							<li><a href="../../recettes_cake_design/index.html">Cakes Design</a></li>
 							<li><a href="#">Mignardises</a></li>
@@ -91,9 +91,9 @@
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="#" target="_blank">Les pâtes</a></li>
-							<li><a href="#" target="_blank">Les crèmes</a></li>
-							<li><a href="#" target="_blank">Les biscuits</a></li>
+							<li><a href="#">Les pâtes</a></li>
+							<li><a href="#">Les crèmes</a></li>
+							<li><a href="#">Les biscuits</a></li>
 						</ul>
 					</li>
 						
