--- a/A_Propos/index.html
+++ b/A_Propos/index.html
@@ -209,14 +209,15 @@
 
 	<div class="footer text-center">
 		<a href="#top">
-	 		<span><i class="fas fa-chevron-circle-up"></i></span>
+	 		<span><i class="fas fa-chevron-circle-up" title="Haut de page"></i></span>
 	 	</a>
 
-		<div class="container">
+	   	<div class="container">
 	   		<div class="row">
 	    		<div class="col">
 	      			<p class="section-title pt-3 font-weight-light">Copyright &copy;
 	      		 	<span id="year"></span><span class="coul"> Vanille Cake</span></p>
+	      		 	<p class="font-weight-light"><small>Sauf mention contraire, l'ensemble des recettes, textes et visuels (photos, illustrations, graphismes) présents sur ce site sont la propriété exclusive d'Alexandra. Il est strictement interdit de les copier et de les redistribuer.</small></p>
 				</div>
 	    	</div>
 	   	</div>
