--- a/Recettes_cake_design/Creations_cake_design/index.html
+++ b/Recettes_cake_design/Creations_cake_design/index.html
@@ -126,75 +126,97 @@
         </div>
     </section>
 
-    <div id="main">
+    <section id="main">
         <div class="container">
+
+                <div class="master mt-3">
+                    <img class="img-thumbnail" alt="cake_design_photo" src="img/design16.jpg" width="410" height="auto">
+                </div>
+
             <div class="row">
+
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design04.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design17.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design05.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design18.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design03.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design19.jpg" width="410" height="800">
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design06.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design04.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design01.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design05.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design08.jpg" width="410" height="800">
-                    </div>
-                </div>
-
-                <div class="col-sm-6 col-md-4">
-                    <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design11.jpg" width="410" height="800">
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design12.jpg" width="410" height="800">
-                    </div>
-                </div>
-                <div class="col-sm-6 col-md-4">
-                    <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design14.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design03.jpg" width="410" height="800">
                     </div>
                 </div>
 
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design01.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design07.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3">
-                        <img class="img-thumbnail" alt="cake_design" src="img/design13.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design01.jpg" width="410" height="800">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design08.jpg" width="410" height="800">
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design11.jpg" width="410" height="800">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design12.jpg" width="410" height="800">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design06.jpg" width="410" height="800">
+                    </div>
+                </div>
+
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design14.jpg" width="410" height="800">
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-4">
+                    <div class="mt-3">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design13.jpg" width="410" height="800">
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-4">
                     <div class="mt-3" >
-                        <img class="img-thumbnail" alt="cake_design" src="img/design15.jpg" width="410" height="800">
+                        <img class="img-thumbnail" alt="cake_design_photo" src="img/design15.jpg" width="410" height="800">
                     </div>
                 </div>
             </div>
         </div>
-    </div>
+    </section>
 
     <!-- SOCIAL -->
     
