--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<div class="row justify-content-around mt-2">
 						<a href="Recettes_healthy/index.html"><img src="img/panecake01.jpg" alt="cake" width="370" height="270" class="pic"><div class="notes text-center"><h5>Pancakes banane</h5></div></a>
 
-						<a href="#"><img src="img/gat04.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Cake design SNK</h5></div></a>
+						<a href="Recettes_cake_design/Creations_cake_design/index.html"><img src="img/gat04a.png" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Créations cake design </h5></div></a>
 					</div>
 
 					<div class="row justify-content-around mt-2">
@@ -141,7 +141,7 @@
 				<div class="col-md-4 tittle2" id="aside1">
    					<h3>Recettes par thème</h3>
    						<ul style="list-style-type:square; font-size: 160%; line-height: 2.5;">
-							<li><a href="Recettes_cake_design/index.html">Recettes Cake Design</a></li>
+							<li><a href="Recettes_cake_design/index.html">Recettes cake design</a></li>
 							<li><a href="">Recettes aux chocolats</a></li>
 							<li><a href="Recettes_de_fêtes/index.html">Recettes de fêtes</a></li>
 						</ul>
