--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<div class="row justify-content-around mt-2">
 						<a href="Recettes_healthy/index.html"><img src="img/panecake01.jpg" alt="cake" width="370" height="270" class="pic"><div class="notes text-center"><h5>Pancakes banane</h5></div></a>
 
-						<a href="Recettes_cake_design/Creations_cake_design/index.html"><img src="img/gat04a.png" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Créations cake design </h5></div></a>
+						<a href="Recettes_cake_design/Creations_cake_design/index.html"><img src="img/gat04.png" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Créations cake design </h5></div></a>
 					</div>
 
 					<div class="row justify-content-around mt-2">
