--- a/Recettes_cake_design/Presentation_cake_design/index.html
+++ b/Recettes_cake_design/Presentation_cake_design/index.html
@@ -233,7 +233,7 @@
             <div class="row">
                 <div class="col">
                     <p class="section-title pt-3 font-weight-light">Copyright &copy;
-                    <span id="year"></span><span class="coul"> Vanille Cake</span></p>
+                    <span id="year"></span><span class="coul"> vanillecake.fr</span></p>
                     <p class="font-weight-light"><small>Sauf mention contraire, l'ensemble des recettes, textes et visuels (photos, illustrations, graphismes) présents sur ce site sont la propriété exclusive d'Alexandra. Il est strictement interdit de les copier et de les redistribuer.</small></p>
                 </div>
             </div>
