--- a/Recettes_de_fêtes/Recette_galette_pommes_amandes/index.html
+++ b/Recettes_de_fêtes/Recette_galette_pommes_amandes/index.html
@@ -265,7 +265,8 @@
                 <div class="container">
                     <div class="row">
                         <div class="col">
-                            <img src="img/Pliage_pate.png" alt="galette" class="img-thumbnail img-fluid rounded mx-auto d-block" width="400" height="350">
+                            <a href="./img/Pliage_pate.png" target="_blank" title="clic pour agrandir">
+                            <img src="img/Pliage_pate.png" alt="galette" class="img-thumbnail img-fluid rounded mx-auto d-block" width="400" height="350"></a>
                         </div>
                     </div>
                 </div>
