--- a/A_Propos/index.html
+++ b/A_Propos/index.html
@@ -94,7 +94,7 @@
 							<a href="#" class="nav-link">Techniques de base</a>
 							<ul>
 								<li><a href="#">Les pâtes</a></li>
-								<li><a href="#">Les crèmes</a></li>
+								<li><a href="../Recettes_de_cremes/index.html">Les crèmes</a></li>
 								<li><a href="#">Les biscuits</a></li>
 							</ul>
 						</li>
