--- a/Recettes_de_fêtes/Recette_galette_amande/index.html
+++ b/Recettes_de_fêtes/Recette_galette_amande/index.html
@@ -92,7 +92,7 @@
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
 							<li><a href="#">Les pâtes</a></li>
-							<li><a href="#">Les crèmes</a></li>
+							<li><a href="../../Recettes_de_cremes/index.html">Les crèmes</a></li>
 							<li><a href="#">Les biscuits</a></li>
 						</ul>
 					</li>
@@ -125,6 +125,8 @@
             </div>
          </div>
     </section>
+
+    <!-- TEXTE INTRO -->
 
     <div id="main1">
     	<div class="container">
