--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
 							<li><a href="">Les pâtes</a></li>
-							<li><a href="">Les crèmes</a></li>
+							<li><a href="Recettes_de_cremes/index.html">Les crèmes</a></li>
 							<li><a href="">Les biscuits</a></li>
 						</ul>
 					</li>
@@ -126,7 +126,7 @@
 					</div>
 
 					<div class="row justify-content-around mt-2">
-						<a href="Recettes_healthy/index.html"><img src="img/panecake01.jpg" alt="cake" width="370" height="270" class="pic"><div class="notes text-center"><h5>Pancakes banane</h5></div></a>
+						<a href="Recettes_healthy/index.html"><img src="img/panecake01.jpg" alt="cake" width="370" height="270" class="pic"><div class="notes text-center"><h5>Healthy</h5></div></a>
 
 						<a href="Recettes_cake_design/Creations_cake_design/index.html"><img src="img/gat04.png" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Créations cake design </h5></div></a>
 					</div>
