--- a/Recettes_de_cremes/index.html
+++ b/Recettes_de_cremes/index.html
@@ -135,7 +135,7 @@
             <div class="row">
 				<div class="group-img col-md-12">
 					<div class="row justify-content-around mt-5">
-						<a href="creme_anglaise/index.html"><img src="img/creme01.jpg" alt="creme" width="400" height="260"><div class="notes text-center"><h5>Crème anglaise</h5></div></a>
+						<a href="Creme_anglaise/index.html"><img src="img/creme01.jpg" alt="creme" width="400" height="260"><div class="notes text-center"><h5>Crème anglaise</h5></div></a>
 
 						<a href="/index.html"><img src="img/creme01.jpg" alt="creme" width="400" height="260"><div class="notes text-center"><h5>Crème</h5></div></a>
 					</div>
