--- a/Recettes_healthy/Pancake_banane/index.html
+++ b/Recettes_healthy/Pancake_banane/index.html
@@ -85,7 +85,7 @@
                             <li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
                             <li><a href="#">Mignardises</a></li>
                             <li><a href="#">Viennoisseries</a></li>
-                            <li><a href="../Recettes_Cookies/index.html" >Cookies</a></li>
+                            <li><a href="../../Recettes_Cookies/index.html" >Cookies</a></li>
                             <li><a href="../../Recettes_healthy/index.html">Healthy</a></li>
                             <li><a href="#">Pâtes à tartiner</a></li>
                         </ul>
