--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
 	<!-- ASIDE SOCIAL-->
 				<div class="tittle3" id="aside2">
 		   			<h3>Suivez-moi sur instagram</h3>
-		   			<a href="https://www.instagram.com/alex_vanille_cake/" target="_blank">
+		   			<a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" title="insta Alex">
 		   			<img src="img/insta2.png" alt="social" width="320" height="250" class="img-fluid mx-auto d-block pic"></a>
 		   		</div>
 	<!-- ASIDE A PROPOS -->
@@ -174,11 +174,11 @@
         <div class="main center">
 
             <div class="icon center">
-             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
+             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alex"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
             </div>
 
             <div class="icon center">
-            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social"><div class="fond_face"></div></a>
+            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social" title="facebook Alex"><div class="fond_face"></div></a>
             </div>
             
             <div class="icon center">
