--- a/Recettes_healthy/Crème_dessert_chocolat/index.html
+++ b/Recettes_healthy/Crème_dessert_chocolat/index.html
@@ -86,10 +86,10 @@
 							<li><a href="#">Gateaux</a></li>
 							<li><a href="#">Entremets</a></li>
 							<li><a href="#">Tartes</a></li>
-							<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
+							<li><a href="../../Recettes_cake_design/index.html">Cakes Design</a></li>
 							<li><a href="#">Mignardises</a></li>
 							<li><a href="#">Viennoisseries</a></li>
-							<li><a href="../Recettes_cookies/index.html">Cookies</a></li>
+							<li><a href="../../Recettes_cookies/index.html">Cookies</a></li>
 							<li><a href="../../Recettes_healthy/index.html">Healthy</a></li>
 							<li><a href="#">Pâtes à tartiner</a></li>
 						</ul>
@@ -98,8 +98,8 @@
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="#">Les pâtes</a></li>
-							<li><a href="../../Recettes_de_cremes/index.html">Les crèmes</a></li>
+							<li><a href="#" class="nav-link">Les pâtes</a></li>
+							<li><a href="../../Recettes_de_cremes/index.html" class="nav-link">Les crèmes</a></li>
 							<li><a href="#">Les biscuits</a></li>
 						</ul>
 					</li>
