--- a/Recettes_healthy/Pancake_banane/index.html
+++ b/Recettes_healthy/Pancake_banane/index.html
@@ -105,7 +105,7 @@
                     </li>
 
                     <li class="nav-item ml-3 mr-3">
-                        <a href="../A_Propos/index.html" class="nav-link">A Propos</a>
+                        <a href="../../A_Propos/index.html" class="nav-link">A Propos</a>
                     </li>
                     
                     <li class="nav-item ml-3">
