--- a/A_Propos/index.html
+++ b/A_Propos/index.html
@@ -84,7 +84,7 @@
 								<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
 								<li><a href="#">Mignardises</a></li>
 								<li><a href="#">Viennoisseries</a></li>
-								<li><a href="../Recettes_Cookies/index.html">Cookies</a></li>
+								<li><a href="../Recettes_cookies/index.html">Cookies</a></li>
 								<li><a href="../Recettes_healthy/index.html">Healthy</a></li>
 								<li><a href="#">Pâtes à tartiner</a></li>
 							</ul>
@@ -120,7 +120,7 @@
 			</div>
 			<div class="text-content">
 				<p>Bonjour !</p>
-				<p>Gourmande puis passionnée de pâtisserie, j’ai expérimenté à 12 ans mes premières recettes puis en autodidacte j’ai appris dans les livres. </p>
+				<p>Gourmande puis passionnée de pâtisserie, j’ai expérimenté à 12 ans mes premières recettes puis en autodidacte j’ai appris dans les livres.</p>
 				<p>Pendant mon année de baccalauréat hôtellerie, j’ai remporté la demi finale du « Championnat de France du Dessert » Catégorie Juniors Lycées. J’ai passé mon BEP de pâtisserie à 20 ans, sans jamais exercer mais en continuant ma passion pour le plus grand plaisir de mes premiers fans, ma famille et mes amis.</p>
 				<p>Aujourd’hui, je partage mes recettes et mes expériences en espérant vous donner l’envie à vous aussi de le faire chez vous par plaisir et gourmandise.</p>
 				<p>Certaines recettes seront faciles et rapides. D’autres recettes pourront être plus techniques et plus longues à réaliser.</p>
@@ -146,11 +146,11 @@
         <div class="main center">
 
             <div class="icon center">
-             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social"><img src="img/insta.png" alt="image"><div class="fond_insta"></div></a>
+             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alex"><img src="img/insta.png" alt="image"><div class="fond_insta"></div></a>
             </div>
 
             <div class="icon center">
-            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="image"><div class="fond_face"></div></a>
+            <a href="https://www.facebook.com" target="_blank" class="social" title="facebook Alex"><img src="img/face.png" alt="image"><div class="fond_face"></div></a>
             </div>
             
             <div class="icon center">
