--- a/Recettes_de_fêtes/index.html
+++ b/Recettes_de_fêtes/index.html
@@ -49,7 +49,7 @@
 	<header id="img-header">
         <div class="container">
 	        <div id="tittle-intro">
-                <h1 class="percent"><span style="font-size:150%;">V</span>anille <span style="font-size:150%;">C</span>ake</h1>
+                <h1 class="percent"><span style="font-size:150%;">V</span>anille <span style="font-size:150%;">C</span>ake<span style="font-size: 20%;"><i class="far fa-registered"></i></span></h1>
             </div>
             <div class="container">
                 <div class="row">
