--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 	<header>
 		<div id="logo">
 			<div class="container">
-				<img src="img/logoV3web.png" alt="logo">
+				<img src="img/logoV3web.png" alt="logo vanille cake">
 			</div>
 		</div>
 		<div class="container">
@@ -122,7 +122,7 @@
    					<div class="row justify-content-around">
 						<a href="Recettes_de_fêtes/Recette_galette_amande/index.html"><img src="img/gat20.jpg" alt="galette" width="370" height="270" class="pic"><div class="notes text-center"><h5>Galette des rois à l'amande</h5></div></a>
 
-						<a href="Recettes_cookies/Cookies_brownies/index.html"><img src="img/cookie01.jpg" alt="cookie" width="370" height="270" class="pic"><div class="notes text-center"><h5>Cookies</h5></div></a>
+						<a href="Recettes_cookies/index.html"><img src="img/cookie01.jpg" alt="cookie" width="370" height="270" class="pic"><div class="notes text-center"><h5>Cookies</h5></div></a>
 					</div>
 
 					<div class="row justify-content-around mt-2">
