--- a/Recettes_cookies/Cookies_moelleux/index.html
+++ b/Recettes_cookies/Cookies_moelleux/index.html
@@ -382,7 +382,7 @@
 
     <div class="footer text-center">
         <a href="#top">
-            <span><i class="fas fa-chevron-circle-up"></i></span>
+            <span><i class="fas fa-chevron-circle-up" title="haut de page"></i></span>
         </a>
 
         <div class="container">
