--- a/Recettes_de_cremes/Creme_anglaise/index.html
+++ b/Recettes_de_cremes/Creme_anglaise/index.html
@@ -240,7 +240,7 @@
                     <section id="images3">
                         <div class="col-12">
                             <h3>Suivez-moi sur instagram</h3>   
-                            <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank"><img src="img/insta2.png" title="instagram" alt="social" class="img-fluid"></a> 
+                            <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank"><img src="img/insta2.png" title="insta Alex" alt="social" class="img-fluid"></a> 
                         </div>
                     </section>
                 </div>
@@ -378,7 +378,7 @@
 
 <div class="footer text-center">
         <a href="#top">
-            <span><i class="fas fa-chevron-circle-up"></i></span>
+            <span><i class="fas fa-chevron-circle-up" title="haut de page"></i></span>
         </a>
 
         <div class="container">
