--- a/Recettes_cookies/Cookies_brownies/index.html
+++ b/Recettes_cookies/Cookies_brownies/index.html
@@ -268,7 +268,7 @@
                     <section id="images3">
                         <div class="col-12">
                             <h3>Suivez-moi sur instagram</h3>   
-                            <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank"><img src="img/insta2.png" alt="social" class="img-fluid"></a> 
+                            <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" title="insta Alex"><img src="img/insta2.png" alt="social" class="img-fluid"></a> 
                         </div>
                     </section>
                   
@@ -382,7 +382,7 @@
 
 	<div class="footer text-center">
 		<a href="#top">
-	 		<span><i class="fas fa-chevron-circle-up"></i></span>
+	 		<span><i class="fas fa-chevron-circle-up" title="haut de page"></i></span>
 	 	</a>
 
 	   	<div class="container">
