--- a/Recettes_de_cremes/index.html
+++ b/Recettes_de_cremes/index.html
@@ -151,11 +151,11 @@
         <div class="main center">
 
             <div class="icon center">
-             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
+             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alex"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
             </div>
 
             <div class="icon center">
-            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social"><div class="fond_face"></div></a>
+            <a href="https://www.facebook.com" target="_blank" title="facebook Alex" class="social"><img src="img/face.png" alt="social"><div class="fond_face"></div></a>
             </div>
             
             <div class="icon center">
@@ -214,7 +214,7 @@
 
 <div class="footer text-center">
         <a href="#top">
-            <span><i class="fas fa-chevron-circle-up"></i></span>
+            <span><i class="fas fa-chevron-circle-up" title="haut de page"></i></span>
         </a>
 
         <div class="container">
