--- a/Recettes_healthy/Crème_dessert_chocolat/index.html
+++ b/Recettes_healthy/Crème_dessert_chocolat/index.html
@@ -198,11 +198,11 @@
         <div class="main center">
 
             <div class="icon center">
-             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alexandra"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
+             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alex"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
             </div>
 
             <div class="icon center">
-            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social" title="facebook Alexandra"><div class="fond_face"></div></a>
+            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social" title="facebook Alex"><div class="fond_face"></div></a>
             </div>
             
             <div class="icon center">
@@ -382,11 +382,11 @@
         <div class="main center">
 
             <div class="icon center">
-             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alexandra"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
+             <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank" class="social" title="insta Alex"><img src="img/insta.png" alt="social"><div class="fond_insta"></div></a>
             </div>
 
             <div class="icon center">
-            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social" title="facebook Alexandra"><div class="fond_face"></div></a>
+            <a href="https://www.facebook.com" target="_blank" class="social"><img src="img/face.png" alt="social" title="facebook Alex"><div class="fond_face"></div></a>
             </div>
             
             <div class="icon center">
