--- a/Recettes_cake_design/Les_biscuits_de_base/Recette_molly_cake/index.html
+++ b/Recettes_cake_design/Les_biscuits_de_base/Recette_molly_cake/index.html
@@ -295,7 +295,7 @@
                     <section id="images3">
                         <div class="col-12">
                         <h3>Suivez-moi sur instagram</h3>   
-                        <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank"><img src="img/insta2.png" alt="social" class="img-fluid"></a></div>
+                        <a href="https://www.instagram.com/alex_vanille_cake/" target="_blank"><img src="img/insta2.png" alt="social" class="img-fluid" title="insta Alex"></a></div>
                     </section>
 
                 </div>
