Ajout new recette

--- a/Recettes_cookies/index.html
+++ b/Recettes_cookies/index.html
@@ -135,6 +135,8 @@
 						<a href="Cookies_brownies/index.html"><img src="img/cookies12.jpg" alt="cookie" width="370" height="270"><div class="notes text-center"><h5>Cookies brownies choco</h5></div></a>
 
 						<a href="Cookies_moelleux/index.html"><img src="img/cookies02.jpg" alt="cookie" width="370" height="270"><div class="notes text-center"><h5>Cookies moelleux</h5></div></a>
+
+						<a href="Cookies_extra_moelleux/index.html"><img src="img/cookies03.jpg" alt="cookie" width="370" height="270"><div class="notes text-center"><h5>Cookies extra moelleux</h5></div></a>
 					</div>
 				</div>
 			</div>
