--- a/Recettes_cookies/Cookies_extra_moelleux/index.html
+++ b/Recettes_cookies/Cookies_extra_moelleux/index.html
@@ -226,7 +226,7 @@
 
                             <p class="mb-3"><span><i class="far fa-hand-point-right"></i></span>Attendez qu’ils refroidissent pour les débarrasser sur une grille.</p>
 
-                            <p class="mb-3"><span><i class="far fa-hand-point-right"></i></span>Vous pourrez les conserver dans une boite en fer (s’il vous en reste…)</p>
+                            <p class="mb-3"><span><i class="far fa-hand-point-right"></i></span>Vous pourrez les conserver dans une boite en métal (s’il vous en reste…)</p>
                         </div>
     				</div>
     			</div>
