--- a/index.html
+++ b/index.html
@@ -80,13 +80,10 @@
 						<ul>
 							<li><a href="">Gateaux</a></li>
 							<li><a href="">Entremets</a></li>
-							<li><a href="">Tartes</a></li>
+							<li><a href="Tartes/index.html">Tartes</a></li>
 							<li><a href="Recettes_cake_design/index.html">Cakes Design</a></li>
-							<li><a href="">Mignardises</a></li>
-							<li><a href="">Viennoisseries</a></li>
 							<li><a href="Recettes_cookies/index.html">Cookies</a></li>
 							<li><a href="Recettes_healthy/index.html">Healthy</a></li>
-							<li><a href="">Pâtes à tartiner</a></li>
 						</ul>
 					</li>
 						
@@ -120,7 +117,7 @@
    			<div class="row">
    				<div class="group-img col-md-8">
    					<div class="row justify-content-around">
-						<a href="Recettes_de_fêtes/Recette_galette_amande/index.html"><img src="img/gat20.jpg" alt="galette" width="370" height="270" class="pic"><div class="notes text-center"><h5>Galette des rois à l'amande</h5></div></a>
+						<a href="Tartes/Tarte_au_citron/index.html"><img src="img/tarte_citron06.jpg" alt="galette" width="370" height="270" class="pic"><div class="notes text-center"><h5>Tarte citron meringuée</h5></div></a>
 
 						<a href="Recettes_cookies/index.html"><img src="img/cookie01.jpg" alt="cookie" width="370" height="270" class="pic"><div class="notes text-center"><h5>Cookies</h5></div></a>
 					</div>
@@ -132,7 +129,7 @@
 					</div>
 
 					<div class="row justify-content-around mt-2">
-						<a href="#"><img src="img/gat05.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Pop cakes</h5></div></a>
+						<a href="#"><img src="img/tarte_fruits.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Tarte aux fruits</h5></div></a>
 
 						<a href="#"><img src="img/gat06.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Choux de Noël</h5></div></a>
 					</div>
