Ajout new recette

--- a/Recettes_de_fêtes/index.html
+++ b/Recettes_de_fêtes/index.html
@@ -79,13 +79,10 @@
 						<ul>
 							<li><a href="#">Gateaux</a></li>
 							<li><a href="#">Entremets</a></li>
-							<li><a href="#">Tartes</a></li>
+							<li><a href="../Tartes/index.html">Tartes</a></li>
 							<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
-							<li><a href="#">Mignardises</a></li>
-							<li><a href="#">Viennoisseries</a></li>
 							<li><a href="../Recettes_cookies/index.html">Cookies</a></li>
 							<li><a href="../Recettes_healthy/index.html">Healthy</a></li>
-							<li><a href="#">Pâtes à tartiner</a></li>
 						</ul>
 					</li>
 						
@@ -130,6 +127,8 @@
             <div class="row">
 				<div class="group-img col-md-12">
 					<div class="row justify-content-around mt-5">
+                        <a href="Doigts_de_sorciere/index.html"><img src="img/doigts01.jpg" alt="galette" width="370" height="270"><div class="notes text-center"><h5>Doigts de sorcère à l'amande</h5></div></a>
+
 						<a href="Recette_galette_amande/index.html"><img src="img/gal05.jpg" alt="galette" width="370" height="270"><div class="notes text-center"><h5>Galette des roi à l'amande</h5></div></a>
 
 						<a href="Recette_galette_pommes_amandes/index.html"><img src="img/galp09.jpg" alt="galette" width="370" height="270"><div class="notes text-center"><h5>Galette des rois amandes-pommes</h5></div></a>
