--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 					<div class="row justify-content-around mt-2">
 						<a href="#"><img src="img/tarte_fruits.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Tarte aux fruits</h5></div></a>
 
-						<a href="#"><img src="img/gat06.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Choux de Noël</h5></div></a>
+						<a href="Recettes_de_fêtes/Doigts_de_sorciere/index.html"><img src="img/doigts01.jpg" alt="gateau" width="370" height="270" class="pic"><div class="notes text-center"><h5>Doigts de sorcière à l'amande</h5></div></a>
 					</div>
    				</div>
 	<!-- ASIDE -->
