--- a/Recettes_de_cremes/index.html
+++ b/Recettes_de_cremes/index.html
@@ -24,52 +24,21 @@
     <link rel="shortcut icon" href="img/logo2.jpg">
     <link rel="stylesheet" href="css/style.css">
 
-	<style> 
-	body { 
-		animation: fadeInAnimation ease 2s; 
-		animation-fill-mode: forwards; 
-		animation-iteration-count: 1; 
-	} 
-	@keyframes fadeInAnimation { 
-	0% 
-	{ 
-	opacity: 0; 
-	} 
-	100% { 
-	opacity: 1; 
-	} 
-	} 
-	</style>
-
 </head>
 
 <body id="top">
 
 	<!-- HEADER -->
-
-	<header id="img-header">
-		<div class="container">
-
-	<div id="tittle-intro">
-		<h1 class="percent"><span style="font-size:150%;">V</span>anille <span style="font-size:150%;">C</span>ake<span style="font-size: 20%;"><i class="far fa-registered"></i></span></h1>
-	
-
-	
-		<div class="container">
-            <div class="row">
-                <div class="text-intro col text-center">
-                    <p><span class="pr-3"><i class="fas fa-cheese"></i></span> Le blog de pâtisserie pour gourmands<span class="pl-3"><i class="fas fa-birthday-cake"></i></span></p>
-                </div>
-            </div>
-        </div>
-	
+    <header>
+        <div id="logo">
+			<div class="title">
+				<h1 class="percent text-3d"><span class="space" style="font-size:180%;">V</span>anille <span class="space2" style="font-size:170%;">C</span>ake<span style="font-size: 20%;"></span></h1>
+			</div>
 		</div>
-		</div>
-	</header>
+    </header>
 
-<!-- NAV-BAR -->
-
-	<nav class="navbar sticky-top navbar-expand-md" id="main-nav">
+    <!-- NAV-BAR -->
+    <nav class="navbar sticky-top navbar-expand-md" id="main-nav">
 		<div class="container">
            <button class="navbar-toggler bg-dark" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -85,20 +54,17 @@
 						<ul>
 							<li><a href="#">Gateaux</a></li>
 							<li><a href="#">Entremets</a></li>
-							<li><a href="#">Tartes</a></li>
+							<li><a href="../Tartes/index.html">Tartes</a></li>
 							<li><a href="../Recettes_cake_design/index.html">Cakes Design</a></li>
-							<li><a href="#">Mignardises</a></li>
-							<li><a href="#">Viennoisseries</a></li>
 							<li><a href="../Recettes_cookies/index.html" >Cookies</a></li>
 							<li><a href="../Recettes_healthy/index.html">Healthy</a></li>
-							<li><a href="#">Pâtes à tartiner</a></li>
 						</ul>
 					</li>
 						
                     <li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="#">Les pâtes</a></li>
+							<li><a href="../Pates/index.html">Les pâtes</a></li>
 							<li><a href="#">Les crèmes</a></li>
 							<li><a href="#">Les biscuits</a></li>
 						</ul>
@@ -134,10 +100,8 @@
         <div class="container">
             <div class="row">
 				<div class="group-img col-md-12">
-					<div class="row justify-content-around mt-5">
-						<a href="Creme_anglaise/index.html"><img src="img/creme01.jpg" alt="creme" width="400" height="260"><div class="notes text-center"><h5>Crème anglaise</h5></div></a>
-
-						<a href="/index.html"><img src="img/creme01.jpg" alt="creme" width="400" height="260"><div class="notes text-center"><h5>Crème</h5></div></a>
+					<div class="row justify-content-around">
+						<a href="Creme_anglaise/index.html"><img src="img/creme01.jpg" alt="creme" width="370" height="250"><div class="notes text-center"><h5>Crème anglaise</h5></div></a>
 					</div>
 				</div>
 			</div>
