--- a/Tartes/index.html
+++ b/Tartes/index.html
@@ -64,7 +64,7 @@
 					<li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="#">Les pâtes</a></li>
+							<li><a href="../Pates/index.html">Les pâtes</a></li>
 							<li><a href="../Recettes_de_cremes/index.html">Les crèmes</a></li>
 							<li><a href="#">Les biscuits</a></li>
 						</ul>
@@ -98,7 +98,7 @@
         <div class="container">
             <div class="row">
 				<div class="group-img col-md-12">
-					<div class="row justify-content-around mt-5">
+					<div class="row justify-content-around">
 						<a href="Tarte_au_citron/index.html"><img src="img/tarte_citron1.jpg" alt="tarte citron" width="420" height="300"><div class="notes text-center"><h5>Tarte au citron meringuée</h5></div></a>
                     </div>
 				</div>
