--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 					<li class="nav-item ml-3 mr-3">
 						<a href="#" class="nav-link">Techniques de base</a>
 						<ul>
-							<li><a href="">Les pâtes</a></li>
+							<li><a href="Pates/index.html">Les pâtes</a></li>
 							<li><a href="Recettes_de_cremes/index.html">Les crèmes</a></li>
 							<li><a href="">Les biscuits</a></li>
 						</ul>
@@ -130,8 +130,10 @@
                 <div class="text">Crèpes chocolat</div>
             </div>
             <div class="item item-3">
-                <img src="img/img03.jpg" alt="">
-                <div class="text">Cookies chocolat</div>
+                <a href="Recettes_cookies/Cookies_brownies/index.html">
+                    <img src="img/img03.jpg" alt="">
+                    <div class="text">Cookies chocolat</div>
+                </a>
             </div>
             <div class="item item-4">
                 <img src="img/img04.jpg" alt="">
@@ -146,8 +148,10 @@
                 <div class="text">Cake design</div>
             </div>
             <div class="item item-7">
-                <img src="img/img07.jpg" alt="">
-                <div class="text">Panecake banane</div>
+                <a href="Recettes_healthy/Pancake_banane/index.html">
+                    <img src="img/img07.jpg" alt="">
+                    <div class="text">Panecake banane</div>
+                </a>
             </div>
             <div class="item item-8">
                 <a href="Tartes/Tarte_au_citron/index.html">
@@ -260,5 +264,4 @@
     <script src="js/main.js"></script>
 
 </body>
-
 </html>
